Improve type safety (#1531)
Added type information to dozens of collections for arguments and variables used by the engine.